--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,8 +8,143 @@
     tools:context=".ui.activity.LoginActivity">
 
     <ImageView
+        android:id="@+id/iv_header"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="fitXY"
         android:src="@mipmap/login__header_bg" />
+
+    <ImageView
+        android:id="@+id/iv_logo"
+        android:layout_width="@dimen/dp_100"
+        android:layout_height="@dimen/dp_100"
+        android:layout_gravity="center_horizontal"
+        android:src="@mipmap/logo" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center_horizontal"
+        android:padding="@dimen/dp_10"
+        android:text="@string/app_name"
+        android:textColor="@color/black"
+        android:textSize="@dimen/dp_30" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_10"
+        android:orientation="horizontal"
+        android:padding="8dip">
+
+        <com.healthclock.healthclock.widget.IconFontTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="10dip"
+            android:text="@string/ic_phone"
+            android:textSize="@dimen/sp_24" />
+
+        <EditText
+            android:id="@+id/login_et_phone"
+            android:layout_width="0dip"
+            android:layout_height="30dip"
+            android:layout_marginLeft="10dip"
+            android:layout_weight="1"
+            android:background="@null"
+            android:drawablePadding="10dip"
+            android:hint="@string/user_phone_hint"
+            android:inputType="text"
+            android:textColorHint="@color/gray"
+            android:textSize="14sp" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_10"
+        android:background="@color/line"></View>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_10"
+        android:orientation="horizontal"
+
+        android:padding="8dip">
+
+        <com.healthclock.healthclock.widget.IconFontTextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:paddingLeft="10dip"
+            android:text="@string/ic_pwd"
+            android:textSize="@dimen/sp_24" />
+
+        <EditText
+            android:id="@+id/login_et_pwd"
+            android:layout_width="0dip"
+            android:layout_height="30dip"
+            android:layout_marginLeft="10dip"
+            android:layout_weight="1"
+            android:background="@null"
+            android:drawablePadding="10dip"
+            android:hint="@string/user_pwd_hint"
+            android:inputType="textPassword"
+            android:textColorHint="@color/gray"
+            android:textSize="14sp" />
+    </LinearLayout>
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_10"
+        android:background="@color/line"></View>
+
+    <com.healthclock.healthclock.widget.BorderTextView
+        android:id="@+id/tv_login"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_45"
+        android:layout_marginLeft="@dimen/dp_50"
+        android:layout_marginRight="@dimen/dp_50"
+        android:layout_marginTop="28dip"
+        android:gravity="center"
+        android:padding="8dip"
+        android:text="@string/user_login"
+        android:textColor="@color/white"
+        android:textSize="@dimen/sp_18"
+        app:contentBackColor="?title_text_color"
+        app:cornerRadius="@dimen/dp_20"
+        app:strokeColor01="?title_text_color"
+        app:strokeWidth01="1dp" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_40"
+        android:layout_marginTop="@dimen/dp_10"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_forget_pwd"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/user_forget_pwd"
+            android:textColor="@color/black" />
+
+        <TextView
+            android:id="@+id/tv_register_account"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:text="@string/user_register_account"
+            android:textColor="?title_text_color" />
+
+    </LinearLayout>
 </LinearLayout>
