--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -16,8 +16,8 @@
 
     <ImageView
         android:id="@+id/iv_logo"
-        android:layout_width="@dimen/dp_100"
-        android:layout_height="@dimen/dp_100"
+        android:layout_width="@dimen/dp_90"
+        android:layout_height="@dimen/dp_90"
         android:layout_gravity="center_horizontal"
         android:src="@mipmap/logo" />
 
@@ -28,7 +28,7 @@
         android:padding="@dimen/dp_10"
         android:text="@string/app_name"
         android:textColor="@color/black"
-        android:textSize="@dimen/dp_30" />
+        android:textSize="@dimen/sp_24" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -96,6 +96,17 @@
             android:inputType="textPassword"
             android:textColorHint="@color/gray"
             android:textSize="14sp" />
+        <ToggleButton
+            android:id="@+id/tb_re_pwd"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:background="@android:color/transparent"
+            android:button="@drawable/switch_btn"
+            android:checked="false"
+            android:paddingLeft="@dimen/dp_10"
+            android:text=""
+            android:textOff=""
+            android:textOn="" />
     </LinearLayout>
 
     <View
