--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -132,7 +132,7 @@
             android:layout_weight="7"
             android:background="@null"
             android:hint="@string/user_pwd_hint"
-            android:inputType="number"
+            android:inputType="textPassword"
             android:textColorHint="@color/gray"
             android:textSize="14sp" />
     </LinearLayout>
@@ -171,7 +171,12 @@
             android:textColorHint="@color/gray"
             android:textSize="14sp" />
     </LinearLayout>
-
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dip"
+        android:layout_marginLeft="@dimen/dp_10"
+        android:layout_marginRight="@dimen/dp_10"
+        android:background="@color/line"></View>
     <com.healthclock.healthclock.widget.BorderTextView
         android:id="@+id/tv_register"
         android:layout_width="match_parent"
@@ -182,12 +187,12 @@
         android:gravity="center"
         android:padding="8dip"
         android:text="@string/user_register"
-        android:textColor="?title_text_color"
-        app:contentBackColor="?title_text_color"
+        android:textColor="@color/white"
         android:textSize="@dimen/sp_18"
+        app:contentBackColor="@color/bt_gray"
         app:cornerRadius="@dimen/dp_20"
-        app:strokeColor01="@color/white"
-        app:strokeWidth01="1dp" />
+        app:strokeColor01="@color/bt_gray"
+        app:strokeWidth01="1dp"  />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -220,7 +225,7 @@
             android:layout_height="wrap_content"
             android:paddingBottom="10dp"
             android:paddingTop="10dp"
-            android:text="《XXXX用户协议》"
+            android:text="《美康闹钟用户协议》"
             android:textColor="?title_text_color"
             android:textSize="12sp" />
     </LinearLayout>
