--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,6 +7,6 @@
     android:orientation="vertical"
     tools:context=".ui.activity.MainActivity">
 
-    <include layout="@layout/layout_topbar_nor"></include>
+    <include layout="@layout/topbar_nor"></include>
 
 </LinearLayout>
