--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".ui.activity.RegisterActivity">
 
-    <include layout="@layout/layout_topbar_nor"></include>
+    <include layout="@layout/topbar_nor"></include>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -73,7 +73,7 @@
                 android:layout_weight="3"
                 android:background="@null"
                 android:drawablePadding="10dip"
-                android:hint="@string/user_code"
+                android:hint="@string/user_code_hint"
                 android:inputType="number"
                 android:textColor="@color/black"
                 android:textColorHint="@color/gray"
