--- a/app/src/main/res/layout/activity_forget_pwd.xml
+++ b/app/src/main/res/layout/activity_forget_pwd.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".ui.activity.ForgetPwdActivity">
+    tools:context=".ui.activity.login.ForgetPwdActivity">
 
     <include layout="@layout/topbar_nor"></include>
 
