--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -57,4 +57,7 @@
     <dimen name="sp_24">24sp</dimen>
     <dimen name="sp_26">26sp</dimen>
     <dimen name="sp_28">28sp</dimen>
+    <!-- Default screen margins, per the Android Design guidelines. -->
+    <dimen name="activity_horizontal_margin">16dp</dimen>
+    <dimen name="activity_vertical_margin">16dp</dimen>
 </resources>
