--- a/app/src/main/res/layout/popup_content_layout.xml
+++ b/app/src/main/res/layout/popup_content_layout.xml
@@ -2,12 +2,22 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginLeft="@dimen/dp_40"
-    android:layout_marginRight="@dimen/dp_40"
     android:layout_marginTop="@dimen/dp_20"
     android:orientation="vertical"
     android:padding="1dp">
-
+    <!--<TextView-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:text="选择性别"-->
+        <!--android:padding="@dimen/dp_10"-->
+        <!--android:gravity="center_horizontal"-->
+        <!--android:textColor="@color/black"/>-->
+    <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="0.5dp"-->
+        <!--android:layout_marginLeft="@dimen/dp_10"-->
+        <!--android:layout_marginRight="@dimen/dp_10"-->
+        <!--android:background="@color/line"></View>-->
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
