--- a/app/src/main/res/layout/topbar_nor.xml
+++ b/app/src/main/res/layout/topbar_nor.xml
@@ -38,9 +38,9 @@
         android:layout_height="match_parent"
         android:layout_alignParentRight="true"
         android:gravity="center"
-        android:layout_margin="@dimen/dp_10"
+        android:padding="@dimen/dp_10"
         android:textColor="@color/white"
-        android:textSize="55px"
+        android:textSize="@dimen/sp_14"
         android:text=""
       />
 
