--- a/datelibrary/src/main/res/layout/cbk_dialog_pick_time.xml
+++ b/datelibrary/src/main/res/layout/cbk_dialog_pick_time.xml
@@ -80,7 +80,7 @@
             android:background="@drawable/abc_list_selector_holo_light"
             android:gravity="center"
             android:text="确定"
-            android:textColor="#FF424D"
+            android:textColor="#000000"
             android:textSize="14sp"
             />
 
