--- a/app/src/main/res/layout/activity_register_protocol.xml
+++ b/app/src/main/res/layout/activity_register_protocol.xml
@@ -23,14 +23,12 @@
     <com.healthclock.healthclock.widget.BorderTextView
         android:id="@+id/tv_confirm"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/dp_45"
-        android:layout_marginBottom="@dimen/dp_10"
-        android:layout_marginLeft="@dimen/dp_45"
-        android:layout_marginRight="@dimen/dp_45"
-        android:layout_marginTop="@dimen/dp_10"
+        android:layout_height="@dimen/dp_40"
+      android:layout_margin="@dimen/dp_20"
         android:gravity="center"
         android:padding="8dip"
         android:text="@string/user_confirm"
+        android:textSize="@dimen/sp_16"
         android:textColor="@color/white"
         app:contentBackColor="?title_text_color"
         app:cornerRadius="@dimen/dp_20"
