--- a/app/src/main/res/layout/topbar_nor.xml
+++ b/app/src/main/res/layout/topbar_nor.xml
@@ -30,7 +30,7 @@
         android:textColor="@color/white"
         android:maxLines="1"
         android:text=""
-        android:textSize="@dimen/text_big_size" />
+        android:textSize="@dimen/sp_16" />
 
     <com.healthclock.healthclock.widget.IconFontTextView
         android:id="@+id/tv_right"
