--- a/app/src/main/res/layout/activity_select_address.xml
+++ b/app/src/main/res/layout/activity_select_address.xml
@@ -1,41 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
-    tools:context=".ui.activity.member.UserInfoActivity">
-
+    tools:context=".ui.activity.member.SelectAddressActivity">
     <include layout="@layout/topbar_nor"></include>
-
-    <ScrollView
+    <ListView
+        android:id="@+id/lv_address"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="1">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="vertical">
-
-            <include layout="@layout/layout_userinfo_view"></include>
-
-        </LinearLayout>
-    </ScrollView>
-
+        android:layout_marginTop="10dp"
+        android:layout_weight="1"
+        android:background="#ffffff"
+        android:divider="@color/line"
+        android:dividerHeight="1dp"
+        android:scrollbars="none" />
     <com.healthclock.healthclock.widget.BorderTextView
-        android:id="@+id/tv_edit"
+        android:id="@+id/tv_add"
         android:layout_width="match_parent"
         android:layout_height="@dimen/dp_40"
         android:layout_margin="@dimen/dp_20"
         android:gravity="center"
         android:padding="8dip"
-        android:text="确定修改"
+        android:text="新增地址"
         android:textColor="@color/white"
         android:textSize="@dimen/sp_16"
-        app:contentBackColor="?title_text_color"
+        app:contentBackColor="@color/bt_gray"
         app:cornerRadius="@dimen/dp_20"
-        app:strokeColor01="?title_text_color"
+        app:strokeColor01="@color/bt_gray"
         app:strokeWidth01="1dp" />
 </LinearLayout>
