--- a/app/src/main/res/layout/fragment_member.xml
+++ b/app/src/main/res/layout/fragment_member.xml
@@ -265,7 +265,43 @@
                     android:layout_marginLeft="@dimen/dp_10"
                     android:layout_marginRight="@dimen/dp_10"
                     android:background="@color/line"></View>
+                <LinearLayout
+                    android:id="@+id/ll_address"
+                    android:layout_width="match_parent"
+                    android:layout_height="@dimen/dp_50"
+                    android:layout_gravity="center_vertical"
+                    android:background="@color/white"
+                    android:orientation="horizontal">
 
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="3"
+                        android:gravity="center_vertical"
+                        android:paddingLeft="@dimen/dp_10"
+                        android:text="我的收货地址" />
+
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="3"
+                        android:background="@null"
+                        android:drawablePadding="@dimen/dp_20"
+                        android:drawableRight="@mipmap/icon_more"
+                        android:gravity="center_vertical|right"
+                        android:hint=""
+                        android:paddingRight="@dimen/dp_10"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/gray" />
+                </LinearLayout>
+
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:layout_marginLeft="@dimen/dp_10"
+                    android:layout_marginRight="@dimen/dp_10"
+                    android:background="@color/line"></View>
                 <LinearLayout
                     android:id="@+id/ll_video"
                     android:layout_width="match_parent"
@@ -319,6 +355,19 @@
                         android:gravity="center_vertical"
                         android:paddingLeft="@dimen/dp_10"
                         android:text="个人健康管理" />
+                    <TextView
+                        android:layout_width="0dp"
+                        android:layout_height="match_parent"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="3"
+                        android:background="@null"
+                        android:drawablePadding="@dimen/dp_20"
+                        android:drawableRight="@mipmap/icon_more"
+                        android:gravity="center_vertical|right"
+                        android:hint=""
+                        android:paddingRight="@dimen/dp_10"
+                        android:textColor="@color/black"
+                        android:textColorHint="@color/gray" />
 
                 </LinearLayout>
 
@@ -367,7 +416,7 @@
                     android:layout_marginRight="@dimen/dp_10"
                     android:background="@color/line"></View>
 
-                <LinearLayout
+              <!--  <LinearLayout
                     android:id="@+id/ll_Health_integral"
                     android:layout_width="match_parent"
                     android:layout_height="@dimen/dp_50"
@@ -403,7 +452,7 @@
                     android:layout_height="1dp"
                     android:layout_marginLeft="@dimen/dp_10"
                     android:layout_marginRight="@dimen/dp_10"
-                    android:background="@color/line"></View>
+                    android:background="@color/line"></View>-->
 
                 <LinearLayout
                     android:id="@+id/ll_Health_score"
